--- a/app/about.html
+++ b/app/about.html
@@ -23,24 +23,14 @@
       <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-<<<<<<< HEAD
             <li class="nav-li"><a href="about" class="active">О доме</a></li>
             <li class="nav-li"><a href="location">Расположение</a></li>
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
             <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
-=======
-            <li class="nav-li"><a href="about.html" class="active">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="about.html#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
->>>>>>> FETCH_HEAD
           </ul>
         </nav>
       </div>
@@ -68,7 +58,7 @@
     </div>
     <div class="us-block">
       <div class="wrapper">
-        <div class="us-title">Приемущества дома</div>
+        <div class="us-title">Преимущества дома</div>
         <ul class="benefits">
           <li>
             <div style="background-image: url(images/benefits/panel.svg);" class="benefit-icon"></div>
@@ -83,16 +73,16 @@
           <li>
             <div style="background-image: url(images/benefits/shar.svg);" class="benefit-icon"></div>
             <div class="title">МЕСТОПОЛОЖЕНИЕ</div>
-            <div class="text">Пешеходная улица, развитая инфраструктура, отсутствие загруженных транспортных магистралей – вот главное в месторасположении нового жилого комплекса. Все необходимое находится в радиусе 500м. Это позволит вам больше времени посвятить семье, отдыху, друзьям. </div>
+            <div class="text">
+              Пешеходная улица, развитая инфраструктура, отсутствие загруженных транспортных магистралей – вот главное в месторасположении нового жилого комплекса. Все необходимое находится в радиусе 500м. Это позволит вам больше времени посвятить семье, отдыху, друзьям. 
+              
+            </div>
           </li>
           <li>
             <div style="background-image: url(images/benefits/kapitel.svg);" class="benefit-icon"></div>
             <div class="title">КАЧЕСТВЕННАЯ ОТДЕЛКА</div>
             <div class="text">
-              Качественная отделка подъездов.
-              Современные лифты.
-              Благоустроенная закрытая внутренняя территория, детские игровые комплексы, малые архитектурные формы. Вечернее и ночное освещение территории комплекса и дворовых территорий.
-              Многоярусный и наземный паркинги для жильцов комплекса с возможностью. 
+              При отделке фасада и внутренних помещений дома используются только самыу лучшие современные отделочные материалы. Партнерские отношения с ведущими европейскими брендами позволяет использовать при отделке дома уникальные по красоте и функциональным качествам материалы.
               
             </div>
           </li>
@@ -287,11 +277,7 @@
       </div>
     </div>
     <footer class="footer">
-<<<<<<< HEAD
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
-=======
-      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about.html#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
->>>>>>> FETCH_HEAD
+      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
