--- a/app/company.html
+++ b/app/company.html
@@ -23,40 +23,30 @@
       <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-<<<<<<< HEAD
             <li class="nav-li"><a href="about">О доме</a></li>
             <li class="nav-li"><a href="location">Расположение</a></li>
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company" class="active">Застройщик</a></li>
             <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
-=======
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html" class="active">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="about.html#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
->>>>>>> FETCH_HEAD
           </ul>
         </nav>
       </div>
     </header>
     <div class="wrapper">
-      <h1>ГРУППА КОМПАНИЙ<br>«СТРОЙКОВЪ»</h1>
+      <h1>ООО «НАШ ГОРОДЪ»</h1>
     </div>
     <div class="container company-about">
       <div class="grid_3">
         <div class="desc"> 
-          <p>Строительная компания ООО СК «Стройковъ» предлагает широкий спектр услуг в сфере строительства, производства и финансовой деятельности. Наличие в штате опытных высококвалифицированных специалистов практически всех аспектов строительного производства позволяет решать в кратчайшие сроки задачи различного характера и уровня сложности по конкурентным ценам. В основе работы с Заказчиком для компании приоритетным является конструктивный диалог и своевременное качественное исполнение взятых на себя обязательств. Мы придерживаемся передовых технологий, работаем на самых перспективных площадках города, имеем опыт реализации значимых для Ростовской области объектов, претворяем в жизнь самые смелые решения.</p>
+          <p>Строительная компания ООО «НАШ ГОРОДЪ» предлагает широкий спектр услуг в сфере строительства, производства и финансовой деятельности. Наличие в штате опытных высококвалифицированных специалистов практически всех аспектов строительного производства позволяет решать в кратчайшие сроки задачи различного характера и уровня сложности по конкурентным ценам. В основе работы с Заказчиком для компании приоритетным является конструктивный диалог и своевременное качественное исполнение взятых на себя обязательств. Мы придерживаемся передовых технологий, работаем на самых перспективных площадках города, имеем опыт реализации значимых для Ростовской области объектов, претворяем в жизнь самые смелые решения.</p>
           <p>Мы проводим предварительные обследования территории, занимаемся разработкой технического задания на проектирование и строительство, а также технико-экономического обоснования строительства и инвестиций в строительство, занимаемся оформлением разрешительной, конструкторской, проектной, рабочей документацией, получаем технические условия на подключение объекта к инженерным сетям, выполняем строительные работы.</p>
         </div>
         <ul class="documents-ul">
           <li><a href="#" class="disabled">Уставной документ</a><span> JPG, 659 KB</span></li>
-        </ul><a href="http://stroikov-group.ru/" target="_blank" class="company-link"></a>
+        </ul>
       </div>
       <div class="grid_1">
         <div class="bank">
@@ -75,11 +65,7 @@
       <div class="clearfix"></div>
     </div>
     <footer class="footer">
-<<<<<<< HEAD
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
-=======
-      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about.html#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
->>>>>>> FETCH_HEAD
+      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
