--- a/app/layouts.html
+++ b/app/layouts.html
@@ -23,24 +23,14 @@
       <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-<<<<<<< HEAD
             <li class="nav-li"><a href="about">О доме</a></li>
             <li class="nav-li"><a href="location">Расположение</a></li>
             <li class="nav-li"><a href="layouts" class="active">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
             <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
-=======
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html" class="active">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="about.html#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
->>>>>>> FETCH_HEAD
           </ul>
         </nav>
       </div>
@@ -206,7 +196,6 @@
             </div>
             <div class="layout-info">
               <div class="title">КВАРТИРА ДЛЯ БОЛЬШОЙ СЕМЬИ</div>
-              <div class="text">Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.</div>
               <div class="documents-ul">
                 <li><a href="#" class="disabled">Вариант планировки 1</a><span> PDF, 81 KB</span></li>
               </div>
@@ -354,7 +343,6 @@
             </div>
             <div class="layout-info">
               <div class="title">КВАРТИРА ДЛЯ ЭСТЕТОВ</div>
-              <div class="text">Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.</div>
               <div class="documents-ul">
                 <li><a href="#" class="disabled">Вариант планировки 2</a><span> PDF, 81 KB</span></li>
               </div>
@@ -364,7 +352,6 @@
             <div class="layout-map free-var"></div>
             <div class="layout-info">
               <div class="title">СВОБОДНАЯ ПЛАНИРОВКА</div>
-              <div class="text">Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.</div>
               <div class="documents-ul">
                 <li><a href="#" class="disabled">Свободная планировка</a><span> PDF, 81 KB</span></li>
               </div>
@@ -375,11 +362,7 @@
       <div class="clearfix"></div>
     </div>
     <footer class="footer">
-<<<<<<< HEAD
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
-=======
-      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about.html#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
->>>>>>> FETCH_HEAD
+      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
