--- a/app/mortgage.html
+++ b/app/mortgage.html
@@ -23,24 +23,14 @@
       <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-<<<<<<< HEAD
             <li class="nav-li"><a href="about">О доме</a></li>
             <li class="nav-li"><a href="location">Расположение</a></li>
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage" class="active">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
             <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
-=======
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html" class="active">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="about.html#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts.html">Контакты</a></li>
->>>>>>> FETCH_HEAD
           </ul>
         </nav>
       </div>
@@ -50,7 +40,7 @@
     </div>
     <div class="mortgage">
       <div class="container">
-        <div class="grid_2 desc">После того, как Вы подобрали квартиры подходящие под ипотеку, например, Вам подходит купить в ипотеку квартиру студию, необходимо собрать необходимые для покупки квартиры через ипотеку документы. Ипотека в Сбербанке документы на квартиру предоставляются в офис финансового учреждения или прямо в офис «Капитал-Инвест» - в этом случае рассмотрение заявки происходит быстрее, ведь документы подаются напрямую в Москву. После их утверждения Вы сможете купить в ипотеку однокомнатную квартиру в одном из наших жилых комплексов.</div>
+        <div class="grid_2 desc">Предложения по ипотеке от банков-партнеров</div>
         <div class="clearfix"></div>
       </div>
       <div class="wrapper">
@@ -191,11 +181,7 @@
       </div>
     </div>
     <footer class="footer">
-<<<<<<< HEAD
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
-=======
-      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about.html#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
->>>>>>> FETCH_HEAD
+      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
