--- a/app/contacts.html
+++ b/app/contacts.html
@@ -23,24 +23,14 @@
       <div class="wrapper"> <a href="./" class="logo"></a>
         <nav class="main-nav">
           <ul class="nav-ul">
-<<<<<<< HEAD
             <li class="nav-li"><a href="about">О доме</a></li>
             <li class="nav-li"><a href="location">Расположение</a></li>
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
             <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts" class="active">Контакты</a></li>
-=======
-            <li class="nav-li"><a href="about.html">О доме</a></li>
-            <li class="nav-li"><a href="location.html">Расположение</a></li>
-            <li class="nav-li"><a href="layouts.html">Планировки</a></li>
-            <li class="nav-li"><a href="mortgage.html">Ипотека</a></li>
-            <li class="nav-li"><a href="company.html">Застройщик</a></li>
-            <li class="nav-li"><a href="news.html">Новости</a></li>
-            <li class="nav-li"><a href="about.html#documents">Документы</a></li>
-            <li class="nav-li"><a href="contacts.html" class="active">Контакты</a></li>
->>>>>>> FETCH_HEAD
           </ul>
         </nav>
       </div>
@@ -50,9 +40,16 @@
       <div class="contacts-container">
         <ul class="contact-blocks">
           <li class="contact-block">
+            <div class="title">Адрес</div>
+            <div class="text">
+              <p>344019, Ростов-на-Дону,</p>
+              <p>16-я линия, 16 б, офис 1</p>
+              <p>Телефон: <a href="tel:+78632955110" class="phone-link">+7 (863) 295-51-10</a></p>
+            </div>
+          </li>
+          <li class="contact-block">
             <div class="title">Отдел продаж</div>
             <div class="text">
-              <p>Ростов-на-Дону, 16-я линия, 16 б </p>
               <p>Телефон: <a href="tel:+78632955111" class="phone-link">+7 (863) 295-51-11</a></p>
               <p>Факс: <a href="tel:+78632955112" class="phone-link">+7 (863) 295-51-12</a></p>
               <p><a href="mailto:sales@krepostnoy100.ru" class="blue-link">sales@krepostnoy100.ru</a></p>
@@ -61,7 +58,6 @@
           <li class="contact-block">
             <div class="title">КЛИЕНТСКИЙ СЕРВИС</div>
             <div class="text">
-              <p>Ростов-на-Дону, 16-я линия, 16 б, </p>
               <p>Телефон: <a href="tel:+78632955110" class="phone-link">+7 (863) 295-51-10</a></p>
               <p>Факс: <a href="tel:+78632955110" class="phone-link">+7 (863) 295-51-10</a></p>
               <p><a href="mailto:client@krepostnoy100.ru" class="blue-link">client@krepostnoy100.ru</a></p>
@@ -72,11 +68,7 @@
     </div>
     <div id="contacts_map" class="contacts-map"></div>
     <footer class="footer">
-<<<<<<< HEAD
-      <div class="wrapper"><span>© Группа компаний «Стройковъ», 2014</span><a href="about#documents" class="brd-link">Правовые документы</a><span class="fl-r">Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
-=======
-      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about.html#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="#" class="brd-link">ГРАФЕМА</a></span></div>
->>>>>>> FETCH_HEAD
+      <div class="wrapper"><span>© ООО «Наш город», 2014</span><a href="about#documents" class="brd-link">Документы</a><span class="fl-r">Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a></span></div>
     </footer>
     <!-- build:js(.) scripts/vendor.js-->
     <!-- bower:js-->
