--- a/app/about.html
+++ b/app/about.html
@@ -28,7 +28,7 @@
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
-            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li nav-news"><a href="news">Новости</a></li>
             <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
@@ -185,7 +185,7 @@
         <div class="grid_2">
           <div class="us-title">Документация</div>
           <ul class="documents-ul">
-            <li><a href="uploads/docs_1.jpg">Разрешение на строиcтельство</a><span> JPG, 260 KB</span></li>
+            <li><a href="uploads/docs_1.jpg">Разрешение на строительство</a><span> JPG, 260 KB</span></li>
             <li><a href="uploads/docs_2.jpg">Свидетельство о праве на земельный участок</a><span> JPG, 708 KB</span></li>
             <li><a href="uploads/docs_3.pdf">Проектная декларация</a><span> PDF, 3.9 MВ</span></li>
             <li><a href="uploads/docs_4.pdf">Договор долевого участия (образец)</a><span> PDF, 138 KB</span></li>
