--- a/app/layouts.html
+++ b/app/layouts.html
@@ -28,7 +28,7 @@
             <li class="nav-li"><a href="layouts" class="active">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
-            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li nav-news"><a href="news">Новости</a></li>
             <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
@@ -196,8 +196,9 @@
             </div>
             <div class="layout-info">
               <div class="title">КВАРТИРА ДЛЯ БОЛЬШОЙ СЕМЬИ</div>
-              <div class="documents-ul">
-                <li><a href="#" class="disabled">Вариант планировки 1</a><span> PDF, 81 KB</span></li>
+              <div class="text"> 
+                <p>Данный вариант плнировки разделен на «гостевую» и «приватную» зоны. С одной стороны находятся две просторные спальни, удобная гардеробная, прилегающая к одной из спален, и детская комната. С другой — расположены большая кухня-столовая и светлая гостиная, где большая семья и гости могут собираться вечерами и устраивать застолье во время праздников. </p>
+                <p>Глава семьи оценит кабинет, где он сможет уединиться, отдыхать или работать в спокойной обстановке. Расположение комнат по периметру квартиры с единым большим холлом в центре обеспечивает прямой и простой доступ к любому помещению вашей квартиры.</p>
               </div>
             </div>
           </div>
@@ -343,8 +344,8 @@
             </div>
             <div class="layout-info">
               <div class="title">КВАРТИРА ДЛЯ ЭСТЕТОВ</div>
-              <div class="documents-ul">
-                <li><a href="#" class="disabled">Вариант планировки 2</a><span> PDF, 81 KB</span></li>
+              <div class="text">
+                <p>Изящество и совершенство должно быть во всем. В данном варианте планировки все комнаты расположены максимально практично. Просторные помещения дают больше возможностей для оригинального дизайна-проекта. Кухня-столовая изящно разделена на зоны, а спальня образует единое органичное пространство с гардеробной. Находясь в кабинете, вы всегда можете выйти на балкон и полюбоваться прекрасными видами Ростова-на-Дону. В такой квартире вдохновение и прекрасный настрой всегда будут вашими спутниками.</p>
               </div>
             </div>
           </div>
@@ -352,8 +353,8 @@
             <div class="layout-map free-var"></div>
             <div class="layout-info">
               <div class="title">СВОБОДНАЯ ПЛАНИРОВКА</div>
-              <div class="documents-ul">
-                <li><a href="#" class="disabled">Свободная планировка</a><span> PDF, 81 KB</span></li>
+              <div class="text">
+                <p>Данная планировка позволяет использовать собственный дизайн-проект, чтобы воплотить в жизнь ваши представления об идеальном доме. Мы с радостью перенесем предложенную вами идею с бумаги в реальность.</p>
               </div>
             </div>
           </div>
