--- a/app/news.html
+++ b/app/news.html
@@ -28,7 +28,7 @@
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
-            <li class="nav-li"><a href="news" class="active">Новости</a></li>
+            <li class="nav-li nav-news"><a href="news" class="active">Новости</a></li>
             <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
