--- a/app/company.html
+++ b/app/company.html
@@ -28,7 +28,7 @@
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage">Ипотека</a></li>
             <li class="nav-li"><a href="company" class="active">Застройщик</a></li>
-            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li nav-news"><a href="news">Новости</a></li>
             <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
@@ -44,13 +44,10 @@
           <p>Строительная компания ООО «НАШ ГОРОДЪ» предлагает широкий спектр услуг в сфере строительства, производства и финансовой деятельности. Наличие в штате опытных высококвалифицированных специалистов практически всех аспектов строительного производства позволяет решать в кратчайшие сроки задачи различного характера и уровня сложности по конкурентным ценам. В основе работы с Заказчиком для компании приоритетным является конструктивный диалог и своевременное качественное исполнение взятых на себя обязательств. Мы придерживаемся передовых технологий, работаем на самых перспективных площадках города, имеем опыт реализации значимых для Ростовской области объектов, претворяем в жизнь самые смелые решения.</p>
           <p>Мы проводим предварительные обследования территории, занимаемся разработкой технического задания на проектирование и строительство, а также технико-экономического обоснования строительства и инвестиций в строительство, занимаемся оформлением разрешительной, конструкторской, проектной, рабочей документацией, получаем технические условия на подключение объекта к инженерным сетям, выполняем строительные работы.</p>
         </div>
-        <ul class="documents-ul">
-          <li><a href="#" class="disabled">Уставной документ</a><span> JPG, 659 KB</span></li>
-        </ul>
       </div>
       <div class="grid_1">
         <div class="bank">
-          <div class="title">Реквезиты</div>
+          <div class="title">Реквизиты</div>
           <div class="text">
             <p>ООО «НАШ ГОРОДЪ»</p>
             <p>ОГРН 1136195011215</p>
