--- a/app/mortgage.html
+++ b/app/mortgage.html
@@ -28,7 +28,7 @@
             <li class="nav-li"><a href="layouts">Планировки</a></li>
             <li class="nav-li"><a href="mortgage" class="active">Ипотека</a></li>
             <li class="nav-li"><a href="company">Застройщик</a></li>
-            <li class="nav-li"><a href="news">Новости</a></li>
+            <li class="nav-li nav-news"><a href="news">Новости</a></li>
             <li class="nav-li"><a href="about#documents">Документы</a></li>
             <li class="nav-li"><a href="contacts">Контакты</a></li>
           </ul>
@@ -40,65 +40,11 @@
     </div>
     <div class="mortgage">
       <div class="container">
-        <div class="grid_2 desc">Предложения по ипотеке от банков-партнеров</div>
+        <div class="grid_2 desc">Наши банки-партнеры помогут вам осуществить свою мечту и сделать вашу жизнь более комфортной уже сейчас. Вы можете ознакомиться с представленными ниже предложениями по ипотеке и выбрать наиболее удобное и подходящее для вас финансовое решение. Генеральный партнер – банк «Центр-Инвест».</div>
         <div class="clearfix"></div>
       </div>
       <div class="wrapper">
         <div class="mortgage-accordion js-accordion">
-          <div class="title m-sberbank"></div>
-          <div class="mortgage-table">
-            <table>
-              <tr>
-                <td>Первоначальный взнос</td>
-                <td>от 10%</td>
-              </tr>
-              <tr>
-                <td>Срок кредита</td>
-                <td>до 30 лет</td>
-              </tr>
-              <tr>
-                <td>Процентная ставка в рублях</td>
-                <td>12.5%</td>
-              </tr>
-              <tr>
-                <td>Информация о предложении</td>
-                <td>
-                  <div class="m-table-blocks">
-                    <div class="m-table-block">
-                      <p><b>С 01 июля 2014 года по 30 сентября 2014 года (включительно) подайте заявку на жилищный кредит по ставке всего 13%!</b></p>
-                      <ul class="us-list">
-                        <li>Приобретение жилья в ЖК «Большой»
-                        <li>Срок завершения строительства не ограничен условиями акции;
-                        <li>Документы по кредитуемому жилому помещению могут быть предоставлены в течение 120 календарных дней с даты принятия решения Банком о выдаче кредита.
-                        <li>Минимальная сумма кредита – 45 000 рублей.
-                        <li>Максимальная сумма кредита не должна превышать меньшую из величин:
-                        <li>87% договорной стоимости кредитуемого жилого помещения;
-                        <li>87% оценочной стоимости иного оформляемого в залог жилого помещения.
-                      </ul>
-                      <p><b>Преимущества программ жилищного кредитования в Сбербанке:</b></p>
-                      <p>Достаточно паспорта РФ для подачи заявки на кредит клиентам, получающим заработную плату на счет, открытый в Сбербанке.</p>
-                    </div>
-                    <div class="m-table-block">
-                      <p><b>В качестве первоначального взноса могут быть использованы:</b></p>
-                      <ul class="us-list">
-                        <li>Материнский капитал;
-                        <li>Жилищные сертификаты.
-                      </ul>
-                      <p><b>Есть возможность воспользоваться налоговыми льготами, снижающими расходы на жилье:</b></p>
-                      <ul class="us-list">
-                        <li>Имущественный вычет (единовременно);
-                        <li>Налоговый вычет (ежегодно).
-                        <li>Для подтверждения дохода может быть предоставлена справка по форме Банка.
-                        <li>Для увеличения суммы получаемого кредита могут быть привлечены созаемщики.
-                        <li>Удобное погашение кредита: достаточно внести необходимую сумму на счет любым удобным способом, погашение произойдет автоматически в соответствии с графиком платежей.
-                      </ul>
-                    </div>
-                  </div>
-                  <p>С подробной информацией о порядке получения кредита вы можете ознакомится на сайте Сбербанка <a href="http://www.sberbank.ru/ru/person/promo/credits/121230">http://www.sberbank.ru/ru/person/promo/credits/121230</a>.</p>
-                </td>
-              </tr>
-            </table>
-          </div>
           <div class="title m-centrinvest"></div>
           <div class="mortgage-table">
             <table>
@@ -129,50 +75,6 @@
                     </div>
                   </div>
                   <p>С подробной информацией о порядке получения кредита вы можете ознакомиться на сайте «Центр-инвеста»   <a href="https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost">https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost</a></p>
-                </td>
-              </tr>
-            </table>
-          </div>
-          <div class="title m-vtb24"></div>
-          <div class="mortgage-table">
-            <table>
-              <tr>
-                <td>Первоначальный взнос</td>
-                <td>20% (базовый размер по кредитам в рублях РФ)<br>30% (базовый размер по кредитам в долларах США или евро)</td>
-              </tr>
-              <tr>
-                <td>Срок кредита</td>
-                <td>до 20 лет (кратно 12 месяцам)</td>
-              </tr>
-              <tr>
-                <td>Процентная ставка в рублях</td>
-                <td>от 13,05%</td>
-              </tr>
-              <tr>
-                <td>Информация о предложении</td>
-                <td>
-                  <div class="m-table-block">
-                    <p>ВТБ24 отменяет аккредитацию на новостройки! Теперь вы можете оформить ипотеку на квартиру в любом строящемся доме без дополнительных согласований и документов.</p>
-                    <ul class="us-list">
-                      <li>не требуется аккредитация объекта в банке;
-                      <li>сумма кредита – от 500 тыс. до 2 млн руб.;
-                      <li>кредит предоставляется на покупку квартиры в любой новостройке;
-                      <li>без комиссий за рассмотрение заявки и выдачу кредита;
-                      <li>кредит погашается досрочно без комиссий и штрафов с момента его получения;
-                      <li>оценку объекта недвижимости банк производит самостоятельно.
-                    </ul>
-                  </div>
-                  <div class="m-table-block">
-                    <p>Значение годовой процентной ставки зависит от наличия у вас страхового полиса по рискам:</p>
-                    <ul class="us-list">
-                      <li>утрата жизни и трудоспособности заёмщика;
-                      <li>утрата или повреждение приобретаемой квартиры;
-                      <li>прекращение или ограничение права собственности на квартиру.
-                      <li>Есть возможность сделать ипотеку дешевле:
-                      <li>если вы зарплатный клиент банка «ВТБ 24»;
-                      <li>если вы владелец пакета «Привилегия» или «Прайм».
-                    </ul>
-                  </div>
                 </td>
               </tr>
             </table>
